<resources>
    <string name="app_name">InstaGraph</string>
    <string name="popup_placeholder">This is a placeholder string for popups.</string>
    <string name="instagraph_information">
        Welcome to InstaGraph!\n\n
        This app features data visualisation and time series forecasting capabilities, broken into five steps:\n\n
        1. Get Data: Provide a URL to a file containing your data in a CSV format.\n\n
        2. Select Graph: Choose between a selection of charts to visualise your data.\n\n
        3. Select Columns: Pick which columns will be plotted, as well as what forecasting model will be used to make predictions. The chosen model can be customised to experiment with different parameters.\n\n
        4. Predict: The selected visualisation is created using the specified columns.\n\n
        5. Result: Using the model of your choice, future values are predicted and graphed along with the original data.
    </string>
    <string name="error_general">An error occurred</string>
    <string name="start_button_text">Start</string>
    <string name="start_button_content">Tap to start InstaGraph.</string>
    <string name="info_button_content">Tap to display information about InstaGraph.</string>
    <string name="choose_file_button_text">Choose file…</string>
    <string name="please_wait">Please Wait…</string>
    <string name="URL_step_text">Enter URL of Dataset</string>
    <string name="URL_input_hint">URL…</string>
    <string name="submit_button_text">Submit</string>
    <string name="next_button_text">Next</string>
    <string name="next_button_content">Tap to proceed</string>
    <string name="back_button_text">Back</string>
    <string name="back_button_content">Tap to go back</string>
    <string name="finish_button_text">Finish</string>
    <string name="finish_button_content">Tap to finish</string>
    <string name="empty_content_description"> </string>
    <string name="step_one">1. Get Data</string>
    <string name="step_two">2. Select Graph</string>
    <string name="step_three">3. Select Columns</string>
    <string name="customise_model">Customise Model</string>
    <string name="step_four">4. Predict</string>
    <string name="step_five">5. Result</string>
    <string name="progress_one">1</string>
    <string name="progress_two">2</string>
    <string name="progress_three">3</string>
    <string name="progress_four">4</string>
    <string name="progress_five">5</string>
    <string name="line_graph">Line Graph</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="horizontal_bar_chart">Horizontal Bar Chart</string>
    <string name="model_spinner_prompt">Model</string>
    <string name="column_one_spinner_prompt">Column 1</string>
    <string name="column_two_spinner_prompt">Column 2</string>
    <string name="line_graph_col1">x-Axis</string>
    <string name="line_graph_col2">y-Axis</string>
    <string name="bar_chart_col1">Labels</string>
    <string name="bar_chart_col2">Data</string>
    <string name="pie_chart_col1">Labels</string>
    <string name="pie_chart_col2">Data</string>
    <string name="horizontal_bar_chart_col1">Labels</string>
    <string name="horizontal_bar_chart_col2">Data</string>
    <string name="trend_spinner_prompt">Trend</string>
    <string name="seasonal_spinner_prompt">Seasonal</string>
    <string name="preview_not_found">The preview plot could not be found. Please try again or use a different URL.</string>
    <string name="preview_unknown_error">An unknown error has occurred. Please ensure the URL is correct and try again.</string>
    <string name="preview_class_cast_error">An error occurred when creating the preview. Please try again.</string>
    <string name="no_preview">No preview to save (Choose File…)</string>
    <string name="preview_saved">Preview saved to Download folder</string>
    <string name="summary_not_found">The summary of the dataset could not be found. Please try again.\n</string>
    <string name="summary_class_cast_error">An error occurred when generating the summary. Please try again.</string>
    <string name="graph_not_highlighted">This graph could not be highlighted. Please choose a different graph.</string>
    <string name="graph_not_found">The graph plot could not be found. Please try again or use a different URL.</string>
    <string name="graph_unknown_error">An unknown error occurred when trying to plot the data. Please try again or use a different URL.</string>
    <string name="graph_saved">Plot saved to Download folder</string>
    <string name="predictions_not_found">The predictions plot could not be found. Please try again or use a different URL.</string>
    <string name="predictions_unknown_error">An unknown error occurred when trying to plot the predictions. Please try again or use a different URL.</string>
    <string name="predictions_saved">Predictions saved to Download folder</string>
    <string name="model_name_placeholder">Model Name</string>
    <string name="ar_order">Order</string>
    <string name="trend">Trend</string>
    <string name="ar_order_hint">Order of Autoregression</string>
    <string name="arima_ar_order">AR Order</string>
    <string name="arima_ma_order">MA Order</string>
    <string name="arima_ma_order_hint">Order of Moving Average</string>
    <string name="arima_diff_order">Diff Order</string>
    <string name="arima_diff_order_hint">Order of Differencing</string>
    <string name="ses_no_customisation_text">No SES parameters are available to customise. The smoothing parameter &#945; is optimised by default.</string>
    <string name="hwes_seasonal_text">Seasonal</string>
    <string name="hwes_seasonal_period_text">Seasonal Period</string>
    <string name="hwes_seasonal_period_input_hint">Period of Seasonality</string>
    <string name="row_limit_input_hint">Number of rows</string>
    <string name="row_limit_text">Limit the number of rows used\n(Leave blank to use all rows).</string>
    <string name="first_last_spinner_prompt">First/Last</string>
    <string name="customise">Customise…</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="enter_number_hint">Enter Number…</string>
    <string name="custom_parameters_not_found">Your custom parameters could not be retrieved. Please try again.</string>
    <string name="custom_parameters_unknown_error">An unknown error occurred when retrieving custom parameters. Please try again.</string>
    <string name="url_blank">URL cannot be blank. Please enter a value for URL and try again.</string>
    <string name="not_enough_rows_to_predict">There are not enough rows in the dataset to predict values. Please adjust the row limit or use a bigger dataset and try again.</string>
    <string name="not_enough_rows">Not enough rows of been selected. Please use at least 2 rows.</string>
    <string name="num_predictions_hint">Number of Predictions</string>
    <string name="num_predictions_text">Enter the number of predictions to make\n(Leave blank to predict 12 steps ahead.</string>
    <string name="ar_model_info">
        Autoregression: Uses a selection of past values to predict future ones using regression.\n\n
        Order: The number of past values to consider.\n\n
        Trend: Inform the model that there is a trend (general upward or downward drift of values) in your data.
    </string>
    <string name="arima_model_info">
        Autoregressive Integrated Moving Average: A combination of the autoregression*, differencing** and moving average***.\n\n
        AR Order: The number of past values to consider.\n\n
        Diff Order: The order of differencing to apply (usually 1 or 2).\n\n
        MA Order: The number of previous prediction errors to consider.\n\n
        Trend: Inform the model that there is a trend (general upward or downward drift of values) in your data.
        *Autoregression: Uses a selection of past values to predict future ones using regression.\n\n
        **Differencing: The process of taking the difference between observations to make the data independent of time. The order of differencing refers to how many times the difference between observations is taken.\n\n
        ***Moving Average: Uses the error of previous predictions to improve future ones in a regression-like fashion.
    </string>
    <string name="ses_model_info">
        Simple Exponential Smoothing: Useful when a trend or seasonal pattern is not clear. SES associates a weight to all observations, which is a measure of its relevance when predicting future values. Larger weights are applied to more recent observations and the weights decrease exponentially over time. The decay of the weights is controlled by the smoothing parameter &#945;.
    </string>
    <string name="hwes_model_info">
        Holt-Winter’s Exponential Smoothing: One variation of exponential smoothing that assigns a weight to all observations. Larger weights are applied to recent values, and the weight decays exponentially over time. HWES accounts for any trend or seasonality in your data.\n\n
        Trend: The type of trend. Additive means there is some constant variation throughout the data. Multiplicative indicates the change is proportional to the level of the series (the average value of data at a particular time).\n\n
        Seasonal: The type of seasonality. Additive means there is some constant variation throughout the data. Multiplicative indicates the change is proportional to the level of the series (the average value of data at a particular time).\n\n
        Seasonal Period: The number of observations within a season. For example, a period of 12 in monthly data implies a yearly seasonal pattern, 7 for weekly, 4 for quarterly, etc.
    </string>
    <string name="parameter_notice">Note: All parameters are optional. Fields left blank will assume a default value.</string>
    <string name="no_dataset">No dataset found (Choose File…)</string>
    <string name="identical_columns">The columns cannot be the same. Please try again.</string>
    <string name="not_enough_seasonal_periods">The seasonal period must be greater than 2.</string>
    <string name="row_limit_info">Please note: This app is best suited to small datasets (less than 1000 rows). Larger datasets will take significant time to process and there is a limit of 3000 rows.</string>
    <string name="too_many_rows">There are too many rows in this dataset. Please choose a dataset with 3000 rows or less.</string>
    <string name="hide">Hide</string>
    <string name="change_graph">Change Graph</string>
    <string name="unknown_error_changing_graph">An unknown error occurred when changing graph. Please try again.</string>
    <string name="failed_to_save_predictions">Failed to save predictions. Please try again</string>
    <string-array name="models">
        <item>AR</item>
        <item>ARIMA</item>
        <item>SES</item>
        <item>HWES</item>
    </string-array>
    <string-array name="trend">
        <item/>
        <item>No trend</item>
        <item>Constant only</item>
        <item>Time trend only</item>
        <item>Constant and time trend</item>
    </string-array>
    <string-array name="hwes_trend">
        <item/>
        <item>Additive</item>
        <item>Multiplicative</item>
    </string-array>
    <string-array name="bool_spinner">
        <item>False</item>
        <item>True</item>
    </string-array>
    <string-array name="first_last">
        <item/>
        <item>First</item>
        <item>Last</item>
    </string-array>
</resources>