<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetDataActivity"
    android:background="@drawable/instagraph_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Main layouts begin here-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Progress bar background-->
            <TextView
                android:id="@+id/progress_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/step_background_height"
                android:background="@drawable/instagraph_step_bar_background"
                android:layout_marginTop="@dimen/step_background_margin_top"/>

            <!--Circles indicating progress-->
            <RelativeLayout
                style="@style/Theme.InstaGraph.Progress.Layout">

                <!--Step one circle-->
                <TextView
                    android:id="@+id/progress_one"
                    style="@style/Theme.InstaGraph.Step.Circle.Focused"
                    android:text="@string/progress_one"/>

                <!--Step two circle-->
                <TextView
                    android:id="@+id/progress_two"
                    style="@style/Theme.InstaGraph.Step.Circle"
                    android:text="@string/progress_two"
                    android:layout_toEndOf="@id/progress_one"
                    android:layout_marginStart="@dimen/distance_from_step_circles"/>

                <!--Step three circle-->
                <TextView
                    android:id="@+id/progress_three"
                    style="@style/Theme.InstaGraph.Step.Circle"
                    android:text="@string/progress_three"
                    android:layout_toEndOf="@id/progress_two"
                    android:layout_marginStart="@dimen/distance_from_step_circles"/>

                <!--Step four circle-->
                <TextView
                    android:id="@+id/progress_four"
                    style="@style/Theme.InstaGraph.Step.Circle"
                    android:text="@string/progress_four"
                    android:layout_toEndOf="@id/progress_three"
                    android:layout_marginStart="@dimen/distance_from_step_circles"/>

                <!--Step five circle-->
                <TextView
                    android:id="@+id/five"
                    style="@style/Theme.InstaGraph.Step.Circle"
                    android:text="@string/progress_five"
                    android:layout_toEndOf="@id/progress_four"
                    android:layout_marginStart="@dimen/distance_from_step_circles"/>
            </RelativeLayout>

            <!--Step text-->
            <TextView
                android:id="@+id/step_text"
                style="@style/Theme.InstaGraph.Step.Text"
                android:text="@string/URL_step_text"
                android:textSize="@dimen/url_step_text"/>

            <!--URL input-->
            <EditText
                android:id="@+id/url_input"
                style="@style/Theme.InstaGraph.Input.URL"
                android:hint="@string/URL_input_hint"
                android:importantForAutofill="no"/>

            <!--Submit button-->
            <Button
                android:id="@+id/submit"
                style="@style/Theme.InstaGraph.Button.Big"
                android:text="@string/submit_button_text"
                android:textSize="@dimen/submit_button_text"
                android:layout_below="@id/url_input"
                android:layout_marginTop="@dimen/url_input_and_submit_gap"
                android:contentDescription="@string/start_button_content"/>
        </RelativeLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>