<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/instagraph_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Main layouts begin here-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Title-->
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/title_text" />

            <!--Logo image-->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/instagraph_logo"
                android:layout_marginTop="275dp"
                android:contentDescription="@string/empty_content_description"/>

            <!--Info button-->
            <ImageButton
                android:id="@+id/info"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/instagraph_info"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="210dp"
                android:contentDescription="@string/info_button_content"/>

            <!--Start button-->
            <Button
                style="@style/Theme.InstaGraph.Button.Big"
                android:text="@string/start_button_text"
                android:layout_below="@id/logo"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/start_button_content"/>

            <!--Information window-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.InstaGraph.Info"
                android:visibility="invisible"/>

        </RelativeLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>